# TrayBuddy

./: .gitignore  CHANGELOG.md  README.md  dev.bat  link.bat  pack-mods.ps1  package.json  pnpm-lock.yaml  release.bat  setup-windows-build-env.bat  svelte.config.js  test.bat  vite.config.js  项目架构.md
.codebuddy/integration/: cloudStudio.json
.codebuddy/sandbox/: sandbox.json
check-tool/: .gitignore
check-tool/bundle_analyzer/: analyzer.ps1  run.bat  使用说明.txt
check-tool/memory_profile/: profiler.ps1  run-10min.bat  run.bat  使用说明.txt
config/: media_observer_keywords.json  process_observer_keywords.json  render_tuning.json
docs/: 3D Mod 设计.md  Live2D Mod 设计.md  PngRemix Mod 设计.md  cross-platform-stubs.md  pngremix-field-audit-report.md  project-overview.md  详细设计.md  需求设计.md  项目架构.md
docs/tutorial/: NewMod.md  Sequence.md  live2d.md  pngremix.md  states_triggers.md
i18n/: en.json  jp.json  zh.json
mod-tool/: .gitignore  app.js  dev-server.mjs  dev-server.ps1  i18n-helper.js  index.html  introduction-i18n.js  introduction-styles.css  introduction.html  pngremix-decoder.js  styles.css  tutorial-i18n.js  tutorial.html  打开-mod编辑器.bat
mod-tool/i18n/: en.json  ja.json  zh.json
mod-tool/template/: ai_tools.json  bubble_style.json  manifest.json  structure.json
mods/: mod-guide.md
mods/BongoCat/: manifest.json
mods/BongoCat2/: manifest.json
mods/cat/: manifest.json
mods/ema/: bubble_style.json  manifest.json  mod-guide.md  mod包指南.md
mods/ema2/: manifest.json
mods/ema3/: manifest.json
mods/hiyori/: manifest.json
mods/jump/: manifest.json
mods/knight/: manifest.json
mods/machine/: manifest.json
mods/mao_pro/: manifest.json
mods/mastermind/: manifest.json
mods/sherry/: manifest.json
mods/sunflower/: manifest.json
mods/template/: manifest.json
mods/test/: manifest.json
mods/tororo/: manifest.json
mods/tutorial/: bubble_style.json  manifest.json
mods_release/BongoCat/: manifest.json
mods_release/BongoCat2/: manifest.json
mods_release/Firefly/: manifest.json
my-tool/: .gitignore  dev-server.js  dev-server.ps1  i18n-helper.js  open-tool.bat  打开-WebM与MOV互转.bat  打开-WebM转MOV.bat  打开-二次元背景生成器.bat  打开-图片循环视频.bat  打开-视频去背景.bat
other-tool/: .gitignore  dev-server.js  dev-server.ps1  i18n-helper.js  live2dcubismcore.min.js  open-tool.bat  打开-fbx预览.bat  打开-gif提取序列帧.bat  打开-live2d导出.bat  打开-pngRemix预览.bat  打开-png转ico.bat  打开-spritesheet切分.bat  打开-spritesheet压缩.bat  打开-spritesheet生成.bat  打开-序列帧对齐工具.bat  打开-序列帧预览.bat  打开-批量裁切缩放.bat  打开-模型预览.bat  打开-视频提取序列帧.bat
src/: bubble_style.json  run-frontend-tests.bat
src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-hooks.nsh  run-cov.bat  run-tests.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  lib_helpers.rs  main.rs
src-tauri/src/commands/: mod.rs  mod_archive_commands.rs  mod_resource_commands.rs  open_with_commands.rs  window_system_commands.rs
src-tauri/src/modules/: ai_tool_manager.rs  constants.rs  environment.rs  environment_runtime.rs  event_manager.rs  media_observer.rs  mod.rs  mod_archive.rs  mod_archive_runtime.rs  process_observer.rs  render_tuning_config.rs  resource.rs  resource_fs_runtime.rs  resource_runtime.rs  screenshot.rs  state.rs  state_runtime.rs  storage.rs  storage_runtime.rs  system_observer.rs  trigger.rs
src-tauri/src/modules/utils/: cached_value.rs  fs.rs  http.rs  i18n.rs  mod.rs  os_version.rs  thread.rs  window.rs
src-tauri/tests/: integration_environment.rs  integration_misc.rs  integration_mod_archive.rs  integration_resource_queries.rs  integration_resource_state_trigger.rs  integration_storage_system.rs  integration_utils.rs  unit_constants.rs
static/: pixi.min.js
tbuddy/: BongoCat.tbuddy  BongoCat2.tbuddy  cat.tbuddy  jump.tbuddy  knight.tbuddy  machine.tbuddy  mastermind.tbuddy  pngremix_test.tbuddy  sherry.tbuddy  sunflower.tbuddy  tororo.tbuddy  tutorial.tbuddy
text_list/: ema.list  ema_JA_only.txt  ema_角色分析与高频句式模板库.txt  人物设定.txt  处理内容.txt  处理结果.txt  提示词.txt  查找内容.txt  查找结果.txt
tools-common/: dev-server-core.mjs  download-blob.js  i18n-helper.js  open-tool-common.bat
workflows/: DaSiWa-WAN2.2图生视频流-支持单图 _ 双图 _ 三图出视频json.json  Z-Image多功能工作流.json
工作流/: Wan2.1 图生视频+Lora.json  Wan2.1 图生视频.json  Wan2.1 文生视频.json  Wan2.1 视频生视频.json  Wan2.1+AI视频首尾帧丝滑动画过渡工作流【AI小王子】.json
提示词/: idle2.txt
(+478 files in other folders)
