[package]
name = "traybuddy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "traybuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1.0"
getrandom = "0.2"

# Windows 媒体监听和鼠标位置
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Win32_UI_WindowsAndMessaging",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# ========================================================================= #
# Release 优化配置 - 减少打包体积和提升运行性能
# ========================================================================= #

[profile.release]
# 启用 LTO (Link-Time Optimization) 进行跨模块优化
lto = true
# 单 codegen unit 产生更小更优化的二进制
codegen-units = 1
# 优化级别: s = 优化体积, z = 更激进的体积优化, 3 = 最大性能
opt-level = "s"
# 移除 debug 符号
strip = true
# 启用 panic abort 减少 unwind 代码体积
panic = "abort"

